--- a/content/ru/domain/courses/databricks-101/99-q&a.md
+++ b/content/ru/domain/courses/databricks-101/99-q&a.md
@@ -6,12 +6,13 @@ type: docs
 date: "2019-05-05T00:00:00+01:00"
 draft: false
 menu:
-  databricks-101:
-    parent: О курсе
-    weight: 99
+  courses:
+    databricks-101:
+      parent: О курсе
+      weight: 99
 
 # Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
-weight: 0
+weight: 4
 ---
 
 * В этом разделе будут расположены ответы на вопросы слушателей курса.
