Publish current blog state

--- a/content/ru/domain/memo/1c.md
+++ b/content/ru/domain/memo/1c.md
@@ -20,13 +20,13 @@ weight: 1
 
 * Зайти в текущий клиент 1С. 
 * В верхнем левом углу выбрать кнопку "меню" \ Справка \ О программе.
-<img src="1с8-about-path.png" width="60%">
+![1с8-about-path.png](1с8-about-path.png)
 
 * Откроется окно "О программе", смотрите версию:
-<img src="1c-about.png" width="60%">
+![1c-about.png](1c-about.png)
 
 * Заходим в каталог: `C:\Program Files\1cv8\` и выбираем каталог с именем найденной версии.
-<img src="1c8-home-directory.png" width="60%">
+![1c8-home-directory](1c8-home-directory.png)
 
 ## Как зарегистрировать библиотеку 1С 8 `comcntr.dll`
 
